--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Charlie Blackstock's Portfolio</title>
+    <title>Mama's Website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,39 +34,13 @@
 
 <body>
 
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); >Start Bootstrap</a>
-            </li>
-            <li>
-                <a href="#top" onclick = $("#menu-close").click(); >Home</a>
-            </li>
-            <li>
-                <a href="#about" onclick = $("#menu-close").click(); >About</a>
-            </li>
-            <li>
-                <a href="#social" onclick = $("#menu-close").click(); >Social</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
-            </li>
-        </ul>
-    </nav>
 
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Charlie Blackstock</h1>
-            <h3>Javascript Vunderkind</h3>
+            <h1>Mama Blackstock</h1>
+            <h3>Best Mom in the World</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
     </header>
 
@@ -84,160 +58,6 @@
         <!-- /.container -->
     </section>
 
-    <!-- Social  -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="social" class="social">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Social</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="social-item">
-                                <span class="fa-stack fa-4x">
-                                <a href="https://www.facebook.com/charles.blackstock"><p class="facebook"></p></a>
-                            </span>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="social-item">
-                                <span class="fa-stack fa-4x">
-                                <a href="https://github.com/blackstc"><p class="github"></p></a>
-                            </span>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="social-item">
-                                <span class="fa-stack fa-4x">
-                                <a href="https://twitter.com/blackstock1110"><p class="twitter"></p></a>
-                            </span>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="socia l-item">
-                                <span class="fa-stack fa-4x">
-                                  <a href="https://www.linkedin.com/pub/charlie-blackstock/46/54/9a8"><p class="linkedin"></p></a>
-                            </span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Work</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                              <div class="primary">
-                                <a href="https://github.com/blackstc/tetris">
-                                    <img class="img-portfolio img-responsive" src="img/Tetris.png">
-                                </a>
-                              </div>
-                              <div class="secondary">
-                                <h2>Tetris Clone</h2>
-                                <hr>
-                                <p>As a front-end project, I re-created the classic game Tetris. I made this game using only vanilla javascript and canvas.</p>
-                                <hr>
-                                <a href="https://github.com/blackstc/tetris" class="btn btn-primary">Github</a>
-                                <a href="https://blackstc.github.io/tetris" class="btn btn-primary">Live Demo</a>
-                              </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                              <div class="primary">
-                                <a href="https://github.com/blackstc/angular-translator">
-                                    <img class="img-portfolio img-responsive" src="img/Translator.png">
-                                </a>
-                              </div>
-                              <div class="secondary">
-                                <h2>Angular Translator</h2>
-                                <hr>
-                                <p>This was my first project using Angular.  This is a simple app that uses the Bing translator API.  The user can create a profile and then practice or taka 10 question challenge to test their translation skills.  Their performance is recorded in a mongo database.</p>
-                                <hr>
-                                <a href="https://github.com/blackstc/angular-translator" class="btn btn-primary">Github</a>
-                                <a href="https://angular-translator.herokuapp.com/" class="btn btn-primary">Live Demo</a>
-                              </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                              <div class="primary">
-                                <a href="https://github.com/blackstc/my-simple-quiz">
-                                  <img class="img-portfolio img-responsive" src="img/StarWars.png">
-                                </a>
-                              </div>
-                              <div class="secondary">
-                                <h2>Star Wars Quiz</h2>
-                                <hr>
-                                <p>This was a simple quiz created when I was first learning javascript.  The quiz randomly generates questions from a quiz bank and validates each answer.  The program was written in basic javascript and jQuery.</p>
-                                <hr>
-                                <a href="https://github.com/blackstc/my-simple-quiz" class="btn btn-primary">Github</a>
-                                <a href="https://blackstc.github.io/my-simple-quiz" class="btn btn-primary">Live Demo</a>
-                              </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                              <div class="primary">
-                                <a href="https://github.com/blackstc/angular-game-map">
-                                    <img class="img-portfolio img-responsive" src="img/AngularGameMap.png">
-                                </a>
-                              </div>
-                              <div class="secondary">
-                                <h2>Steam Games</h2>
-                                <hr>
-                                <p>This is an angular app created to view and get additional information on the games the user owns on Steam.  The app uses OpenId to login to the users Steam account, additionally we used the Giant Bomb API to get the user additional information about the game.</p>
-                                <hr>
-                                <a href="https://github.com/blackstc/angular-game-map" class="btn btn-primary">Github</a>
-                              </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-
-
-    <!-- Footer -->
-    <section id="contact">
-      <footer>
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-10 col-lg-offset-1 text-center">
-                      <h4><strong>Charlie Blackstock</strong>
-                      </h4>
-                      <p>1950 N Logan St, Unit 108<br>Denver, CO 80203</p>
-                      <ul class="list-unstyled">
-                          <li><i class="fa fa-phone fa-fw"></i> (303) 981-8484</li>
-                          <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:charlieblackstock@example.com">charlieblackstock@gmail.com</a>
-                          </li>
-                      </ul>
-                      <hr class="small">
-                      <p class="text-muted">Copyright &copy; Your Website 2015</p>
-                  </div>
-              </div>
-          </div>
-      </footer>
-    </section>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
