--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <p class="lead">I love javascript and love problem solving.  Since I started coding I have had a great opportunity to learn a lot about different technologies like, Mongo, Express, Angular, Node, Canvas, Gulp, Mocha & Chai, and Jasmine.  I'm always looking forward to trying new technologies and trying to improve my code.  Check out some of the projects below that I have been up to lately...</p>
+                    <h2>I Love You Mom!</h2>
+                    <p class="lead">Thank you so much for always being there to support me mom!  The decision to go to gschool was one of the best decisions I have ever made, and there is no way I could have done it without you.  I was terrified about going to school, but then after one five minute phone call with you, you gave me the confidence to know that I was making the right decision.  Unfortuantely, their aren't enough words in the world to describe how much mean to me, but I love you mom!  Merry Christmas!</p>
                 </div>
             </div>
             <!-- /.row -->
