--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Charlie Blackstock's Portfolio</title>
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/ico" href="./img/favicon.ico" />
+    <title>Mama's Website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,47 +26,21 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); >Charlie's Portfolio</a>
-            </li>
-            <li>
-                <a href="#top" onclick = $("#menu-close").click(); >Home</a>
-            </li>
-            <li>
-                <a href="#about" onclick = $("#menu-close").click(); >About</a>
-            </li>
-            <li>
-                <a href="#social" onclick = $("#menu-close").click(); >Social</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
-            </li>
-        </ul>
-    </nav>
 
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Charlie Blackstock</h1>
-            <h3>JavaScript Vunderkind</h3>
+            <h1>Mama Blackstock</h1>
+            <h3>Best Mom in the World</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
     </header>
 
@@ -78,8 +49,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <p class="lead">I love javascript and love problem solving.  Since I started coding I have had a great opportunity to learn a lot about different technologies like, Mongo, Express, Angular, Node, Canvas, Gulp, Mocha & Chai, and Jasmine.  I'm always looking forward to trying new technologies and trying to improve my code.  Check out some of the projects below that I have been up to lately...</p>
+                    <h2>I Love You Mom!</h2>
+                    <p class="lead">Thank you so much for always being there to support me mom!  The decision to go to gschool was one of the best decisions I have ever made, and there is no way I could have done it without you.  I was terrified about going to school, but then after one five minute phone call with you, you gave me the confidence to know that I was making the right decision.  Unfortuantely, their aren't enough words in the world to describe how much mean to me, but I love you mom!  Merry Christmas!</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -87,214 +58,44 @@
         <!-- /.container -->
     </section>
 
-    <!-- Social  -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="social" class="social">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Social</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="social-item">
-                                <span class="fa-stack fa-4x">
-                                    <a href="https://www.facebook.com/charles.blackstock"><p class="facebook"></p></a>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="social-item">
-                                <span class="fa-stack fa-4x">
-                                    <a href="https://github.com/blackstc"><p class="github"></p></a>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="social-item">
-                                <span class="fa-stack fa-4x">
-                                    <a href="https://twitter.com/blackstock1110"><p class="twitter"></p></a>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="socia l-item">
-                                <span class="fa-stack fa-4x">
-                                    <a href="https://www.linkedin.com/pub/charlie-blackstock/46/54/9a8"><p class="linkedin"></p></a>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Portfolio</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <div class="primary">
-                                    <a href="https://github.com/blackstc/tetris">
-                                        <img class="img-portfolio img-responsive" src="img/Tetris.png">
-                                    </a>
-                                </div>
-                                <div class="secondary">
-                                    <h2>Tetris Clone</h2>
-                                    <hr>
-                                    <p>As a front-end project, I re-created the classic game Tetris. I made this game using only vanilla javascript and canvas.</p>
-                                    <hr>
-                                    <a href="https://github.com/blackstc/tetris" class="btn btn-primary">Github</a>
-                                    <a href="https://blackstc.github.io/tetris" class="btn btn-primary">Live Demo</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <div class="primary">
-                                    <a href="https://github.com/blackstc/angular-translator">
-                                        <img class="img-portfolio img-responsive" src="img/Translator.png">
-                                    </a>
-                                </div>
-                                <div class="secondary">
-                                    <h2>Angular Translator</h2>
-                                    <hr>
-                                    <p>This was my first project using Angular.  This is a simple app that uses the Bing translator API.  The user can create a profile and then practice or take a 10 question challenge to test their translation skills.  Their performance is recorded in a mongo database.</p>
-                                    <hr>
-                                    <a href="https://github.com/blackstc/angular-translator" class="btn btn-primary">Github</a>
-                                    <a href="https://angular-translator.herokuapp.com/" class="btn btn-primary">Live Demo</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <div class="primary">
-                                    <a href="https://github.com/blackstc/my-simple-quiz">
-                                        <img class="img-portfolio img-responsive" src="img/CyberTanks.png">
-                                    </a>
-                                </div>
-                                <div class="secondary">
-                                    <h2>Cyber Tanks</h2>
-                                    <hr>
-                                    <p>Built in under 3 weeks and entirely pair-programmed, Cyber Tanks is a multiplayer browser game that integrates Phaser, Express, Mongo, and Socket.io. The aim was to make an exciting and 'arcadey' game with a unique controller - your phone.</p>
-                                    <hr>
-                                    <a href="https://github.com/blackstc/mentula" class="btn btn-primary">Github</a>
-                                    <a href="http://cybertanks.herokuapp.com/" class="btn btn-primary">Live Demo</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <div class="primary">
-                                    <a href="https://github.com/blackstc/angular-game-map">
-                                        <img class="img-portfolio img-responsive" src="img/AngularGameMap.png">
-                                    </a>
-                                </div>
-                                <div class="secondary">
-                                    <h2>Steam Games</h2>
-                                    <hr>
-                                    <p>This is an angular app created to view and get additional information on the games the user owns on Steam.  The app uses OpenId to login to the users Steam account, additionally we used the Giant Bomb API to get the user additional information about the game.</p>
-                                    <hr>
-                                    <a href="https://github.com/blackstc/angular-game-map" class="btn btn-primary">Github</a>
-                                    <a href="https://steam-games.herokuapp.com/" class="btn btn-primary">Live Demo</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
+    <!-- Custom Theme JavaScript -->
+    <script>
+    // Closes the sidebar menu
+    $("#menu-close").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });
 
-    <!-- Footer -->
-    <section id="contact">
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <img src="./img/profile-pic.jpg" alt="Vunderkind Charlie" class="img img-circle" />
-                        <h4><strong>Charlie Blackstock</strong>
-                        </h4>
-                        <p>Denver, Colorado</p>
-                        <ul class="list-unstyled">
-                            <li><i class="fa  fa-github-alt fa-fw"></i><a href="//charlies-mini-blogs.ghost.io/">My Blog</a></li>
-                            <li><i class="fa fa-phone fa-fw"></i> (303) 981-8484</li>
-                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:charlieblackstock@example.com">charlieblackstock@gmail.com</a>
-                            </li>
-                            <li><a href="./img/resume.pdf" download>Resume</li>
+    // Opens the sidebar menu
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });
 
-                            </ul>
-                            <hr class="small">
-                            <p class="text-muted">Copyright &copy; 2015 - Charlie Blackstock</p>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-        </section>
+    // Scrolls to the selected menu item on the page
+    $(function() {
+        $('a[href*=#]:not([href=#])').click(function() {
+            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
 
-        <!-- google analytics -->
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-71255848-1', 'auto');
-        ga('send', 'pageview');
-
-        </script>
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
-
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
-
-        <!-- Custom Theme JavaScript -->
-        <script>
-        // Closes the sidebar menu
-        $("#menu-close").click(function(e) {
-            e.preventDefault();
-            $("#sidebar-wrapper").toggleClass("active");
-        });
-
-        // Opens the sidebar menu
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#sidebar-wrapper").toggleClass("active");
-        });
-
-        // Scrolls to the selected menu item on the page
-        $(function() {
-            $('a[href*=#]:not([href=#])').click(function() {
-                if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-
-                    var target = $(this.hash);
-                    target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                    if (target.length) {
-                        $('html,body').animate({
-                            scrollTop: target.offset().top
-                        }, 1000);
-                        return false;
-                    }
+                var target = $(this.hash);
+                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                if (target.length) {
+                    $('html,body').animate({
+                        scrollTop: target.offset().top
+                    }, 1000);
+                    return false;
                 }
-            });
+            }
         });
-        </script>
+    });
+    </script>
 
 </body>
 
